ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: foodadvisor-frontend-np
            port:
              number: 3000
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: foodadvisor-backend-np
            port:
              number: 1337
